web/app/themes/gds/resources/styles/partials/menu.scss
@use "@/common/breakpoints" as *;

// Mobile menu
@include mq($until: desktopmenu) {
  .menu {
    display: flex;
    flex-direction: column;
  }

  .menu-item {
    position: relative;
    display: flex;
    flex-wrap: wrap;

    &__link {
      display: block;
      text-decoration: none;
      padding: 16px var(--viewport-gutter);

      // When the submenu is open
      .is-active > & {
        font-weight: 700;
      }

      &:only-child {
        width: 100%;
      }

      &:hover {
        color: var(--gds-color-primary);
      }

      &.is-active {
        text-decoration: underline;
        text-underline-offset: 6px;
        text-decoration-thickness: 2px;
      }

      .menu-item__submenu & {
        padding-left: 32px;
      }
    }

    &__toggle {
      font-size: 12px;
      flex: 1 0 auto;
      padding-right: 24px;
      justify-content: flex-end;
      user-select: none;
      -webkit-tap-highlight-color: transparent;

      > * {
        transition: transform 0.1s ease-out;
      }

      &[aria-expanded="true"] > * {
        transform: rotate(180deg);
      }
    }

    &__submenu {
      display: none;
      flex-direction: column;
      background-color: var(--gds-color-lightest-gray);
      top: 100%;
      width: 100%;

      .menu-item__toggle[aria-expanded="true"] ~ & {
        display: flex;
      }
    }
  }
}

// Desktop menu
@include mq($from: desktopmenu) {
  .menu {
    display: flex;
    flex-wrap: wrap;
    column-gap: 24px;
  }

  .menu-item {
    position: relative;
    display: flex;

    &__link {
      display: block;
      text-decoration: none;
      padding: 8px;

      &:hover {
        color: var(--gds-color-mid-gray);
      }

      &.is-active {
        text-decoration: underline;
        text-underline-offset: 6px;
        text-decoration-thickness: 2px;
      }
    }

    &__toggle {
      transition: transform 0.1s ease-out;
      margin-left: -8px;
      font-size: 12px;
      padding: 4px;

      .menu-item:hover > &,
      &[aria-expanded="true"] {
        transform: rotate(180deg);
      }
    }

    &__submenu {
      display: none;
      flex-direction: column;
      position: absolute;
      background-color: var(--gds-color-white);
      z-index: 10;
      top: 100%;
      box-shadow: var(--gds-box-shadow);
      min-width: 150px;
      margin-left: -8px;
      border-radius: var(--gds-border-radius);

      .menu-item:hover > &,
      .menu-item__toggle[aria-expanded="true"] ~ & {
        display: flex;
      }

      .menu-item__link {
        padding: 8px var(--viewport-gutter);
      }
    }
  }
}

